# alchemical-clone

./: LICENSE  README.md  pyproject.toml  requirements.txt
alchemical_clone/: __init__.py  alchemical_column.py  alchemical_constraint.py  alchemical_index.py  alchemical_lab.py  alchemical_table.py  generated_code.py
alchemical_clone/plugins/: __init__.py  many_to_many.py  one_to_many.py
alchemical_clone/utils/: __init__.py  utils.py
